--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,59 @@
-jobs:
-  aws-cli-example:
-    executor: aws-cli/default
-    steps:
-      - checkout
-      - aws-cli/setup:
-          profile-name: example
-      - run: aws eks --region eu-west-1 update-kubeconfig --name prod
-orbs:
-  aws-cli: circleci/aws-cli@1.2.0
 version: 2.1
-workflows:
-  aws-cli:
-    jobs:
-      - aws-cli-example
+orbs:
+  aws-cli: circleci/aws-cli@0.1.14
+
+description: |
+  Deploy a helm chart on AWS EKS
+commands:
+  setup-kube:
+    parameters:
+      cluster:
+        type: string
+      namespace:
+        default: monitoring
+        type: string
+    steps:
+      - aws-cli/configure
+      - run:
+          name: Configure Kubernetes Client
+          command: |
+            aws eks update-kubeconfig --name prod
+            kubectl create ns monitoring
+            kubectl config set-context $(kubectl config current-context) --namespace monitoring
+            # sanity check
+            kubectl get services
+  init-helmv3:
+    parameters:
+      chart:
+        type: string
+    steps:
+      - aws-cli/configure
+      - run:
+          name: Initialise Helm
+          command: |
+            helm list
+  upgrade-or-install:
+    parameters:
+      helmparams:
+        default:
+        type: string
+      chart:
+        type: string
+      language:
+        default: 'js'
+        description: Chart type for helm - defaults to "js"
+        type: enum
+        enum: ['js', 'go']
+    steps:
+      - aws-cli/configure
+      - run:
+          name: Update Cluster
+          command: |
+            pwd
+            ls -lah
+            helm repo add stable https://kubernetes-charts.storage.googleapis.com/
+            helm upgrade --install prometheus stable/prometheus --namespace monitoring
+executors:
+  helmv3:
+    docker:
+      - image: sibipro/sibi-helm:0.2
