--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: export KUBECONFIG=$HOME/.kube/kubeconfig && aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
       - run:
           name: Initialize helm
-          command: helm init --client-only --kubeconfig=$HOME/.kube/kubeconfig
+          command: helm3 init --client-only --kubeconfig=$HOME/.kube/kubeconfig
       - run:
           name: Add helm repo
           command: helm repo add stable https://kubernetes-charts.storage.googleapis.com/
@@ -25,6 +25,6 @@ jobs:
           command: helm upgrade --install prometheus stable/prometheus --namespace monitoring
 workflows:
   version: 2
-  workflow:
+  helm:
     jobs:
       - deploy
