--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: export KUBECONFIG=$HOME/.kube/kubeconfig && aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
       - run:
           name: Initialize helm
-          command: helm3 init --client-only --kubeconfig=$HOME/.kube/kubeconfig
+          command: helm init --client-only --kubeconfig=$HOME/.kube/kubeconfig
       - run:
           name: Add helm repo
           command: helm repo add stable https://kubernetes-charts.storage.googleapis.com/
