--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: helm repo add stable https://kubernetes-charts.storage.googleapis.com/
       - run:
           name: Install Prometheus
-          command: helm upgrade --install prometheus stable/prometheus --namespace default
+          command: kubectl config view --raw >~/.kube/config && helm upgrade --install prometheus stable/prometheus --namespace default
 workflows:
   version: 2
   helm:
