--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
       - run:
           name: Install Prometheus
           command: helm upgrade --install prometheus stable/prometheus --namespace default --kubeconfig="$HOME/.kube/kubeconfig"
+      - run:
+          name: Install Prom Operator
+          command: helm install stable/prometheus-operator --name prometheus-operator --namespace default --kubeconfig="$HOME/.kube/kubeconfig"
 workflows:
   version: 2
   helm:
